# ml-benchmark

./: CMakeLists.txt  README.md  main.cpp
bench/: bench.h  bench_dot.cpp  bench_gemm.cpp
kernels/: dot.cpp  dot.h  dot_parallel.cpp  dot_simd.cpp  dot_simple.cpp  gemm.cpp  gemm.h
lib/: mat.cpp  mat.h  vec.cpp  vec.h  vec_naive.cpp  vec_naive.h
utils/: timer.h
